Move numerical types before importing a module

--- a/Unit 1 - Basic syntax.ipynb
+++ b/Unit 1 - Basic syntax.ipynb
@@ -16,7 +16,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Simple-math\" data-toc-modified-id=\"Simple-math-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Simple math</a></span><ul class=\"toc-item\"><li><span><a href=\"#Mathematical-operations\" data-toc-modified-id=\"Mathematical-operations-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Mathematical operations</a></span></li><li><span><a href=\"#Importing-a-module\" data-toc-modified-id=\"Importing-a-module-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>Importing a module</a></span></li><li><span><a href=\"#Getting-help\" data-toc-modified-id=\"Getting-help-1.3\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>Getting help</a></span></li></ul></li><li><span><a href=\"#Numerical-objects\" data-toc-modified-id=\"Numerical-objects-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Numerical objects</a></span><ul class=\"toc-item\"><li><span><a href=\"#Assigning-variables\" data-toc-modified-id=\"Assigning-variables-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Assigning variables</a></span></li><li><span><a href=\"#Assignment-operators\" data-toc-modified-id=\"Assignment-operators-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>Assignment operators</a></span></li></ul></li><li><span><a href=\"#Data-sequences\" data-toc-modified-id=\"Data-sequences-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Data sequences</a></span><ul class=\"toc-item\"><li><span><a href=\"#Strings\" data-toc-modified-id=\"Strings-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>Strings</a></span></li><li><span><a href=\"#Tuples\" data-toc-modified-id=\"Tuples-3.2\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>Tuples</a></span></li><li><span><a href=\"#Lists\" data-toc-modified-id=\"Lists-3.3\"><span class=\"toc-item-num\">3.3&nbsp;&nbsp;</span>Lists</a></span></li><li><span><a href=\"#Indexing-and-changing-sequences\" data-toc-modified-id=\"Indexing-and-changing-sequences-3.4\"><span class=\"toc-item-num\">3.4&nbsp;&nbsp;</span>Indexing and changing sequences</a></span></li><li><span><a href=\"#Dictionaries\" data-toc-modified-id=\"Dictionaries-3.5\"><span class=\"toc-item-num\">3.5&nbsp;&nbsp;</span>Dictionaries</a></span></li><li><span><a href=\"#Formatted-printing\" data-toc-modified-id=\"Formatted-printing-3.6\"><span class=\"toc-item-num\">3.6&nbsp;&nbsp;</span>Formatted printing</a></span></li><li><span><a href=\"#Copying-objects\" data-toc-modified-id=\"Copying-objects-3.7\"><span class=\"toc-item-num\">3.7&nbsp;&nbsp;</span>Copying objects</a></span></li><li><span><a href=\"#Exercises\" data-toc-modified-id=\"Exercises-3.8\"><span class=\"toc-item-num\">3.8&nbsp;&nbsp;</span>Exercises</a></span></li></ul></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Simple-math\" data-toc-modified-id=\"Simple-math-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Simple math</a></span><ul class=\"toc-item\"><li><span><a href=\"#Mathematical-operations\" data-toc-modified-id=\"Mathematical-operations-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Mathematical operations</a></span></li><li><span><a href=\"#Numerical-types\" data-toc-modified-id=\"Numerical-types-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>Numerical types</a></span></li><li><span><a href=\"#Assignment-operators\" data-toc-modified-id=\"Assignment-operators-1.3\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>Assignment operators</a></span></li><li><span><a href=\"#Importing-a-module\" data-toc-modified-id=\"Importing-a-module-1.4\"><span class=\"toc-item-num\">1.4&nbsp;&nbsp;</span>Importing a module</a></span></li><li><span><a href=\"#Getting-help\" data-toc-modified-id=\"Getting-help-1.5\"><span class=\"toc-item-num\">1.5&nbsp;&nbsp;</span>Getting help</a></span></li></ul></li><li><span><a href=\"#Data-sequences\" data-toc-modified-id=\"Data-sequences-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Data sequences</a></span><ul class=\"toc-item\"><li><span><a href=\"#Strings\" data-toc-modified-id=\"Strings-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Strings</a></span></li><li><span><a href=\"#Tuples\" data-toc-modified-id=\"Tuples-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>Tuples</a></span></li><li><span><a href=\"#Lists\" data-toc-modified-id=\"Lists-2.3\"><span class=\"toc-item-num\">2.3&nbsp;&nbsp;</span>Lists</a></span></li><li><span><a href=\"#Indexing-and-changing-sequences\" data-toc-modified-id=\"Indexing-and-changing-sequences-2.4\"><span class=\"toc-item-num\">2.4&nbsp;&nbsp;</span>Indexing and changing sequences</a></span></li><li><span><a href=\"#Dictionaries\" data-toc-modified-id=\"Dictionaries-2.5\"><span class=\"toc-item-num\">2.5&nbsp;&nbsp;</span>Dictionaries</a></span></li><li><span><a href=\"#Formatted-printing\" data-toc-modified-id=\"Formatted-printing-2.6\"><span class=\"toc-item-num\">2.6&nbsp;&nbsp;</span>Formatted printing</a></span></li><li><span><a href=\"#Copying-objects\" data-toc-modified-id=\"Copying-objects-2.7\"><span class=\"toc-item-num\">2.7&nbsp;&nbsp;</span>Copying objects</a></span></li><li><span><a href=\"#Exercises\" data-toc-modified-id=\"Exercises-2.8\"><span class=\"toc-item-num\">2.8&nbsp;&nbsp;</span>Exercises</a></span></li></ul></li></ul></div>"
    ]
   },
   {
@@ -130,8 +130,211 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Numerical types\n",
+    "\n",
+    "There are three distinct [numeric types](https://docs.python.org/3/library/stdtypes.html#numeric-types-int-float-complex): integers, floating point numbers (which have a decimal point), and complex numbers. In addition, Booleans are a subtype of integers that can only have 2 possible values (i.e. `False = 0` and `True = 1`).\n",
+    "\n",
+    "Note that there is **no asterisk** needed for the complex number."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Each value is assigned to a variable name:\n",
+    "a = -2 # integer\n",
+    "b = 2.9 # float\n",
+    "c = 2+5j # complex\n",
+    "d = True # boolean\n",
+    "\n",
+    "print(a + b)\n",
+    "print(b + c)\n",
+    "print(d - 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are some [built-in functions](https://docs.python.org/3/library/functions.html) in Python that are always available. A few are demonstrated below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(type(a)) \n",
+    "print(type(b)) \n",
+    "print(type(c))\n",
+    "print(type(d))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "abs(a) # returns the absolute value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "float(a) # returns a floating point number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "round(b) # regular rounding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "int(b) # returns an integer; note this function rounds DOWN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some Python objects have special **attributes** specific to them, which can be accessed by dot notation. Since c is a complex number, we can use dot notation to print the real and imaginary parts or to display its conjugate."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(c.imag)\n",
+    "print(c.real)\n",
+    "c.conjugate # if the output is ever \"<function ...>\", you need to add parentheses at the end!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c.conjugate()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To see the available attributes for an object, write out the object's name, then press <kbd>.</kbd>+<kbd>Tab</kbd>. If you've started typing a name of a variable or attribute, <kbd>Tab</kbd> also acts as an autocomplete.\n",
+    "\n",
+    "Try it below. Click after the full stop and press <kbd>Tab</kbd> to see a menu open up."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# c."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(a, b, c, d) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Even after running the previous cells, the variables remain the same as when we defined them, because we didn't reassign their values.  \n",
+    "\n",
+    "### Assignment operators\n",
+    "The value of a variable can be updated as follows."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val = 5\n",
+    "val = val + 3\n",
+    "val = val**2\n",
+    "val"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Instead of writing the variable name again, you can use this shorthand notation (type the operator before the `=`). This works for all 5 mathematical operators. Neat!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Val = 5\n",
+    "Val += 3\n",
+    "Val **= 2\n",
+    "Val"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that variable names as case-sensitive. Common variable names you may see on the internet include: foo, bar, baz, foobar, val and vec. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "foo = 29\n",
+    "Foo = 11\n",
+    "foo + Foo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is very important to give your variables descriptive names. They are typically lowercase and separated by underscores (like_this). The PEP8 Style Guide for Python Code is available [here]( http://www.python.org/dev/peps/pep-0008/)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,88 +446,16 @@
     "\n",
     "How do we know which functions a module contains? And how do we know what these functions do?\n",
     "\n",
-    "Use the `dir()` (directory) function to return a list of functions within a module. Excluding the argument displays the local variable and function names you have defined. To see the names of built-in functions and variables, import `builtins` and use it as the argument (`dir(builtins)`); however, their documentation is available [here](https://docs.python.org/3/library/functions.html).\n",
+    "Use the `dir()` (directory) function to return a list of functions within a module. \n",
     "\n",
     "When the output of a cell is very long, click on the left column to scroll the output, or double click to hide it."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['__doc__',\n",
-       " '__loader__',\n",
-       " '__name__',\n",
-       " '__package__',\n",
-       " '__spec__',\n",
-       " 'acos',\n",
-       " 'acosh',\n",
-       " 'asin',\n",
-       " 'asinh',\n",
-       " 'atan',\n",
-       " 'atan2',\n",
-       " 'atanh',\n",
-       " 'ceil',\n",
-       " 'comb',\n",
-       " 'copysign',\n",
-       " 'cos',\n",
-       " 'cosh',\n",
-       " 'degrees',\n",
-       " 'dist',\n",
-       " 'e',\n",
-       " 'erf',\n",
-       " 'erfc',\n",
-       " 'exp',\n",
-       " 'expm1',\n",
-       " 'fabs',\n",
-       " 'factorial',\n",
-       " 'floor',\n",
-       " 'fmod',\n",
-       " 'frexp',\n",
-       " 'fsum',\n",
-       " 'gamma',\n",
-       " 'gcd',\n",
-       " 'hypot',\n",
-       " 'inf',\n",
-       " 'isclose',\n",
-       " 'isfinite',\n",
-       " 'isinf',\n",
-       " 'isnan',\n",
-       " 'isqrt',\n",
-       " 'ldexp',\n",
-       " 'lgamma',\n",
-       " 'log',\n",
-       " 'log10',\n",
-       " 'log1p',\n",
-       " 'log2',\n",
-       " 'modf',\n",
-       " 'nan',\n",
-       " 'perm',\n",
-       " 'pi',\n",
-       " 'pow',\n",
-       " 'prod',\n",
-       " 'radians',\n",
-       " 'remainder',\n",
-       " 'sin',\n",
-       " 'sinh',\n",
-       " 'sqrt',\n",
-       " 'tan',\n",
-       " 'tanh',\n",
-       " 'tau',\n",
-       " 'trunc']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "dir(math)\n",
     "# The special functions like __name__ are pronounced \"dunder name\". Dunder is short for \"double underscore\" \n",
@@ -339,7 +470,9 @@
     "\n",
     "Type quit after you're done. \n",
     "\n",
-    "<span style=\"color:red\"> **Warning:** </span> If there's still an asterisk in the status box after you're done, it means that the cell is still busy. At the top notebook menu bar, under Kernel, press Restart (all variable assignments will be undone)."
+    "<span style=\"color:red\"> **Warning:** </span> If there's still an asterisk in the status box after you're done, it means that the cell is still busy. At the top notebook menu bar, under Kernel, press Restart (all variable assignments will be undone).\n",
+    "\n",
+    "To see the names of built-in functions and variables, import `builtins` and use it as the argument (`dir(builtins)`); however, their documentation is available [here](https://docs.python.org/3/library/functions.html)."
    ]
   },
   {
@@ -435,163 +568,6 @@
     " + [Advanced jupyter tricks](https://www.dataquest.io/blog/jupyter-notebook-tips-tricks-shortcuts/)\n",
     " + [Markdown guide](https://www.markdownguide.org/basic-syntax/)\n",
     " + [Markdown table generator](https://www.tablesgenerator.com/markdown_tables#)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Numerical objects\n",
-    "\n",
-    "### Assigning variables\n",
-    "\n",
-    "Now that you're comfortable with basic mathematical operations, let's investigate using variable names. \n",
-    "- Firstly consider how the value of b is overriden below. \n",
-    "- Secondly note how there is **no asterisk** needed for the complex number. \n",
-    "- Thirdly note that a boolean can have a numerical value (e.g. `False = 0` and `True = 1`).\n",
-    "\n",
-    "The PEP8 variable naming conventions are available [here]( http://www.python.org/dev/peps/pep-0008/) (i.e. names should be at least 3 characters, descriptive and lowercase). Both Python and Ruby recommend UpperCamelCase for class names, CAPITALIZED_WITH_UNDERSCORES for constants, and lowercase_separated_by_underscores for other names.\n",
-    "\n",
-    "Common variable names you may see on the internet include: foo, bar, baz, foobar, val and vec. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = -2 # integer\n",
-    "b = 2.5 # float\n",
-    "b = 2.9\n",
-    "c = 2+5j # complex\n",
-    "d = True # boolean\n",
-    "\n",
-    "print(a + b)\n",
-    "print(b + c)\n",
-    "print(d - 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "type(b) # try looking at the other ones"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "There are also built-in functions that can even change the type of variable."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "int(b) #note this function rounds DOWN"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "round(b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "abs(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "float(a) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "abs(c)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Some Python objects have special **attributes** specific to them. To see the available attributes for an object, write out the object's name, press `.` and then Tab. If you've already started typing a name of a function, it also acts as an autocomplete."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(c.imag)\n",
-    "print(c.real)\n",
-    "c.conjugate # if the output is ever \"<function ...>\", you need to add parentheses at the end!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(a, b, c, d) "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Even after all that fun with functions, the variables remain the same as when we defined them, because we didn't reassign their values. They were changed *in-place*.\n",
-    "\n",
-    "### Assignment operators\n",
-    "But let's say we want the value of a variable to update. This shortcut works for all 5 mathematical operators. Neat!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "val = 5\n",
-    "val = val + 3\n",
-    "val = val**2\n",
-    "val"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Val = 5\n",
-    "Val += 3\n",
-    "Val **= 2\n",
-    "Val"
    ]
   },
   {
