--- a/Unit 1 - Basic syntax.ipynb
+++ b/Unit 1 - Basic syntax.ipynb
@@ -164,6 +164,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Scientific notation can be used to create very large or small floats by using an `E` or `e`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(1.23E3, 4.56e3, 7.89E-3, 0.12e-3)\n",
+    "print(1.2E3000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "There are some [built-in functions](https://docs.python.org/3/library/functions.html) in Python that are always available. A few are demonstrated below and will automatically turn green after typing them.\n",
     "\n",
     "Important: The following cell will raise a NameError if you haven't run the previous cell where the values have been assigned to the symbols."
@@ -608,7 +625,7 @@
    "source": [
     "### Strings\n",
     "\n",
-    "Strings are immutable sequences (i.e. they can't be permanently changed after creation—see **Comparison of these types** below). They are defined by text enclosed by quotation marks and there are 4 different ways to write them. The double quotation mark (\") is useful when writing sentences that contain apostrophes. Note the curly apostrophe (‘) copied directly from MS Word won't work. Triple quotes strings can include single or double quotation marks. You can concatenate them (add them together) with a plus."
+    "Strings are immutable sequences (i.e. they can't be permanently changed after creation—see **Comparison of these types** below). They are defined by text enclosed by quotation marks and there are 4 different ways to write them. The double quotation mark (\") is useful when writing sentences that contain apostrophes. Note the curly apostrophe (‘) copied directly from MS Word won't work. Triple quotes strings can include single or double quotation marks. You can concatenate them (add them together) with a plus. See **Formatted printing** below for more information on displaying strings."
    ]
   },
   {
@@ -1142,9 +1159,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Other sequences that will be discussed in later Units include ndarrays (as part of the NumPy module which enable performing a calculation to all the elements in the sequence), as well as Series and DataFrames which are a part of the Pandas module."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Formatted printing\n",
     "\n",
-    "Variables from the code can be printed as part of a string. The overall structure involves typing a string containing curly brackets where specific values must be placed from the `.format()` attribute. It can also be indexed."
+    "Triple quoted strings can span multiple lines. Strings can also include _escape characters_ which are preceded by a backslash. Examples include `\\n` for a newline character and `\\\\` for a backslash. _Raw strings_ turn off the processing of escape sequences and are preceded by an `r`."
    ]
   },
   {
@@ -1153,12 +1177,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"{} needs {} pints\".format('Peter', 4))\n",
-    "print(\"{1} pints are needed by {0}\".format('Peter', 'Four'))\n",
-    "\n",
-    "man = 'Peter'\n",
-    "val = 4\n",
-    "print(f\"{man} needs {val} pints\")"
+    "print('''This is a\n",
+    "backslash: \\\\''')"
    ]
   },
   {
@@ -1167,19 +1187,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "can both span multiple lines"
+    "print('This is a \\nbackslash: \\\\')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(r'This is a \\nbackslash: \\\\')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The number of digits and spacing can be specified using the {:W.DL} syntax, where the optional choices are\n",
-    "+ W: the total width of the value,\n",
+    "Variables from the code can be printed as part of a string. Two methods are demonstrated below:\n",
+    "- The `string.format()` method\n",
+    "- The formatted string literal, or f-string\n",
+    "\n",
+    "The number of digits and spacing can be specified using the `{I:W.DL}` syntax, where the optional inputs are\n",
+    "+ I: the index of the value to be printed\n",
+    "+ W: the total width of the value (including the full stop and whitespace),\n",
     "+ D: the number of decimal places, and\n",
-    "+ L: a letter specifying the type of output (for floats, it can be d, e, or f)\n",
-    "\n",
-    "If you have opened this notebook without running the cell where pi was imported, run the following cell"
+    "+ L: a letter specifying the type of output (e.g. `f` for floats, or `e`/`E` for scientific notation)"
    ]
   },
   {
@@ -1188,7 +1220,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from math import pi"
+    "# if you haven't imported pi above yet\n",
+    "from math import pi\n",
+    "print(pi)"
    ]
   },
   {
@@ -1197,58 +1231,67 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(pi)\n",
-    "print(\"Pi is approximately {:}\".format(pi))\n",
-    "print(\"Pi is approximately {:8f}\".format(pi))\n",
-    "print(\"Pi is approximately {:f}\".format(pi))\n",
-    "print(\"Pi is approximately {:5.4f}\".format(pi))\n",
-    "print(\"Pi is approximately {:.3f}\".format(pi))"
+    "print(\"Pi is approximately {:f}\".format(pi)) # only prints 6 decimal places by default\n",
+    "print(\"Pi is approximately {:11f}\".format(pi)) # 11 spaces in total, including the . (thus adds 3 whitespaces at the front)\n",
+    "print(\"Pi is approximately {:.10f}\".format(pi)) # 10 decimal places\n",
+    "print(\"Pi is approximately {:15.10f}\".format(pi)) # 15 spaces in total of which 10 are decimal places"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"Pi is approximately {pi:f}\")\n",
+    "print(f\"Pi is approximately {pi:11f}\")\n",
+    "print(f\"Pi is approximately {pi:.10f}\")\n",
+    "print(f\"Pi is approximately {pi:15.10f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x0 = 0.12345678E7\n",
+    "x1 = 0.12345678E-7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"This is a very small number:\", x1, \"and this is a very large number:\", x0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Note that the indeces before the : could've been left out if you swap the values, i.e. (x1, x0)\n",
+    "print(\"This is a very small number: {1:15.5E} \\nand this is a very large number: {0:.5e}\".format(x0, x1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# help('FORMATTING')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's consider $ \\sqrt{200000} $ and see effect of the different letters."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sqr2 = 2.0e5**0.5            # scientific notation works with both e and E\n",
-    "\n",
-    "print(sqr2)\n",
-    "print(round(sqr2, 2))\n",
-    "print(\"{:f}\".format(sqr2))   # floating point\n",
-    "print(\"{:14e}\".format(sqr2)) # exponential (the 14 aligns the decimal points)\n",
-    "print(\"{:g}\".format(sqr2))   # shorter of %e or %f"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "value = 5.123E-3\n",
-    "f\"The value I want to see is {value:7.2}\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Note that in Python 2 the % operator was used, in case you find such examples on the internet. More can be read [here](https://docs.python.org/3/tutorial/inputoutput.html)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Other sequences that will be discussed later in this tutorial include ndarrays (as part of the NumPy module which enable performing calculations with all the elements in the sequence), as well as Series and DataFrames which are a part of the Pandas module."
+    "Note that previously the `%` operator (modulo) was used for formatted printing. However, it [exhibits a variety of quirks](https://docs.python.org/3/library/stdtypes.html#old-string-formatting) that lead to a number of common errors (such as failing to display tuples and dictionaries correctly). More help can be obtained [here](https://stackabuse.com/formatting-strings-with-python/) or [here](https://docs.python.org/3/tutorial/inputoutput.html)."
    ]
   },
   {
@@ -1357,17 +1400,6 @@
     "\n",
     "\n",
     "Go to the Tutorial exercises folder and give Tut 1 a try before continuing with the next unit."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Citation\n",
-    "\n",
-    "If used in a scientific publication, cite Python as follows:\n",
-    "\n",
-    "Van Rossum, G and Drake Jr, FL (1995) _Python tutorial_, Centrum voor Wiskunde en Informatica, Amsterdam."
    ]
   },
   {
