Try round() or .format()

--- a/Tutorial exercises/Tut 1 - Basic syntax.ipynb
+++ b/Tutorial exercises/Tut 1 - Basic syntax.ipynb
@@ -16,6 +16,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d309899c",
+   "metadata": {},
+   "source": [
+    "## Scalar mathematics\n",
+    "\n",
+    "Compute the following:\n",
+    "\n",
+    "$$ \\frac{\\big(\\sqrt{333} - \\ln(7)\\big)^2}{5! \\times \\log(40) + 2e^{-5}} $$\n",
+    "\n",
+    "Display the answer to 4 decimal places. Try using both `round()` and formatted printing.\n",
+    "\n",
+    "Hint: `sqrt` and `factorial` are functions in the `math` module.\n",
+    "\n",
+    "Answer: 1.3823"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1d46ae6d",
    "metadata": {},
    "source": [
@@ -44,22 +62,6 @@
     "Hint: You may use slicing, as well as built-in functions (like `range` and `list`) and list attributes (like `append`, `pop` and `sort`). \n",
     "\n",
     "b) While testing your code, you may see that the output of the previous cells keep changing when you rerun them. After your first successful run, rewrite your code so that this does not happen."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "66b125b8",
-   "metadata": {},
-   "source": [
-    "## Scalar mathematics\n",
-    "\n",
-    "Compute the following and display the answer to 4 decimal places:\n",
-    "\n",
-    "$$ \\frac{\\big(\\sqrt{333} - \\ln(7)\\big)^2}{5! \\times \\log(40) + 2e^{-5}} $$\n",
-    "\n",
-    "Hint: `sqrt` and `factorial` are functions in the `math` module.\n",
-    "\n",
-    "Answer: 1.3823"
    ]
   }
  ],
